[package]
name = "raloc"
version = "0.1.0"
authors = ["mctoady.eth <mctoadyeth@gmail.com>"]
edition = "2021"
description = "rust code counter that ignores tests"
license = "MIT"
keywords = ["cli", "rust", "loc"]
readme = "README.md"

[lib]
name = "raloc"
path = "src/lib.rs"

[[bin]]
name = "raloc"
path = "src/main.rs"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
